--- a/hex.html
+++ b/hex.html
@@ -25,7 +25,7 @@
   </nav>
   <main>
     <div class="container">
-      <img src="/img/leche.png">
+      <img src="./img/leche.png">
       <h2>background color :
         <span class="color">
           #f1f5f8
